# pio-python-sdk

./: .gitignore  pyproject.toml  readme.md
example/account/: archive_account_by_name.py  get_account_by_id.py  get_recently_modified_accounts.py  update_account_attributes.py  update_account_credit_status.py  update_account_crm_id.py  update_account_rate_card.py  update_account_website.py
example/authentication/: oauth.py  oauth_defined_scopes.py
example/campaign/: get_campaign_by_id.py  get_campaigns_by_ad_server_network_code.py  get_recently_modified_campaigns.py  update_agency_holding_company.py  update_campaign_attributes.py  update_start_and_end_date_of_campaigns.py
example/contact/: update_contact_details.py
example/creative/: create_creative.py  get_creative.py  update_creative_attributes.py  update_creative_details.py
example/custom_field/: get_custom_field.py
example/group/: get_group_by_id.py  get_line_item_groups_by_campaign.py  update_ad_server_id_on_group.py  update_attributes_on_groups.py  update_budget_on_line_item_group.py  update_group_attributes.py
example/line_item/: get_line_item.py  get_line_item_by_campaign.py  get_line_item_cogs.py  update_ad_server_id_on_line_item.py  update_custom_fields_on_line_items.py  update_line_item_attributes.py  update_start_and_end_date_of_line_items.py
example/opportunity/: get_opportunity.py  opportunity.py  update_crm_id_on_opportunity.py  update_opportunity_attributes.py  update_opportunity_dates.py
example/opportunity_line_item/: get_opportunity_line_item.py  get_opportunity_line_item_by_name.py  set_opportunity_line_item_name_from_custom_field.py  update_opportunity_line_item_attributes.py
example/product/: get_product_by_id.py  get_product_cogs.py
example/product_rate/: add_product_rates_to_rate_cards.py  modify_product_rates_on_rate_cards.py
example/rate_card/: activate_rate_cards.py  archive_rate_cards.py  get_rate_card.py
pio/: __init__.py  _model.py  client.py  oauth.py  pio.py
test/: test_client.py  test_get.py  test_json_encoder.py  test_oauth.py  test_reports.py  test_update.py
(+31 files in other folders)
