[tool.poetry]
name = "placements-io-api"
version = "0.0.1"
description = "Client Library for the Placements.io API"
authors = [
    "Placements.io",
    "Andrew Bowman <abowman@placements.io>",
]
readme = "readme.md"
packages = [{include = "pio"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
